# visnet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yml  package.xml  requirements.txt
camera_info/: camera0.yaml  camera0_mocap_calib.json  camera1.yaml  camera1_mocap_calib.json  camera2.yaml  camera2_mocap_calib.json  camera3.yaml  camera3_mocap_calib.json  camera_0.yaml  camera_1.yaml  camera_2.yaml  camera_3.yaml  camera_default.yaml  camera_mocap_poses.json  camera_test_1600_1200.yml  camera_test_640_480.yml
config/: bag.rviz  bag_view.rviz  camera_0.yaml  camera_1.yaml  camera_2.yaml  camera_3.yaml  camera_node.rviz  camera_view.rviz  mocap.rviz  params.yaml  ros_ign_bridge.yaml  rqt.perspective  sim_camera_view.rviz  visnet.rviz  visnet_sim.rviz
hooks/: visnet.dsv.in
launch/: bag.launch  bag.launch.py  bridge.launch.py  cam_mtt_sim.launch.py  camera.launch  camera.launch.py  camera_config.yml  gscam.launch.py  gz_sim.launch.py  image_bridge.launch.py  mocap.launch  node_bag_record.launch  rqt_bag.launch  sim.launch.py  sim_headless.launch.py  temp.launch.py  usbcam.launch.py  video_gz.launch.py  visnet.launch  visnet.launch.py  visnet_colored.launch
models/: Eagle.mtl  Eagle_medium.dae  Eagle_small.dae
msg/: CamMsmt.msg
notebooks/: SE(2) with Disturbance.ipynb  cam_calib.ipynb  camera_pose.txt  camera_test.ipynb  particle_filter.ipynb  pf_faster.ipynb  pf_multi_target NEW.ipynb  pf_multi_target.ipynb  pf_multi_target_OLD.ipynb  pf_multi_target_distributed.ipynb  pf_single_target.ipynb  pf_single_target_NEW.ipynb  pf_weight_visualize.ipynb  pfilter.py  pfilter_multi.py
scripts/: bbox_projection.py  bg_sub.py  calibrate.py  camera.py  camera_casadi_expr.py  camera_node.py  camera_node_pub.py  camera_node_sub.py  cv_test.py  ex_calibrate_auto.py  (+33 more)
(+35 files in other folders)
